# manual_treadmill

./: .gitignore  ARDUINO_SETUP.md  README.md  main.py  plot_speed.py  requirements.txt  test_arduino.py
arduino_sensor/: arduino_sensor.ino
cpp_app/: CMakeLists.txt  GamepadOutput.cpp  GamepadOutput.h  Gui.cpp  Gui.h  Logger.cpp  Logger.h  MovementTracker.cpp  MovementTracker.h  SensorReader.cpp  SensorReader.h  build.bat  main.cpp
src/: output_gamepad.py  output_keyboard.py  sensor_reader.py  tracker.py
